# OpenSK

./: .gitignore  Cargo.toml  deploy.py  nrf5340_layout.ld  rust-toolchain.toml  setup.sh
boards/nordic/nrf5340dk_opensk/: Cargo.toml  Makefile  README.md  layout.ld
boards/nordic/nrf5340dk_opensk/src/: io.rs  main.rs
examples/: console_test.rs
libraries/opensk/: Cargo.toml
libraries/opensk/src/ctap/: storage.rs
libraries/persistent_store/: Cargo.toml
libraries/persistent_store/src/: lib.rs  model.rs  store.rs
src/: main.rs
src/env/tock/: buffer_upgrade_storage.rs  mod.rs  phantom_buffer_storage.rs  storage.rs  upgrade_helper.rs
